# tryout-scheduling

./: .gitignore  .pre-commit-config.yaml  LICENSE  genetic.py  get_avail_csv.py  get_avail_data.py  greedy.py  main.py  pyproject.toml  requirements.txt  sat.py
judge/: load_data.py  sat.py
scheduler/judge/: load_data.py  sat.py
scheduler/tryout/: genetic.py  greedy.py  helpers.py  load_data.py  sat.py  time_ranges.py  utils.py
tests/tryout/: test_time_ranges.py
tryout/: genetic.py  get_avail_data.py  greedy.py  helpers.py  load_data.py  sat.py
